# DevilutionX

./: .gitignore  CMakeLists.txt  build-clean-vs.bat  build-clx-render.bat  build-fresh-relwithdebinfo.bat  build-from-release.bat  build-full-project.bat  build-game-only.bat  build-instructions.txt  build-no-network.bat  build-relwithdebinfo.bat  build-vs-project.bat  build-vs-relwithdebinfo.bat  build-with-fixes.bat  build-with-msbuild.bat  build-with-vscode-task.bat  build-with-vscode.bat  compile-clx-render-only.bat  compile-clx-render.bat  copy-and-build.bat  copy-fixed-monster-files.bat  copy-monster-files.bat  drop_rate_comparison.csv  drop_rate_config.json  fix-monster-type.ps1  monster_changes_backup.patch  monster_patch.cpp  move_monster_files.bat  open-in-visual-studio.bat  open-in-vs.bat  package-lock.json  package.json  rebuild-clx-render.bat  run-game.bat
.cursor/rules/: cursor_rules.mdc
.github/workflows/: Windows_MinGW_x64.yml  Windows_MinGW_x64_prerelease.yml
Source/: diablo.cpp  gamemenu.cpp  gamemenu.h  items.cpp  items.h  monster.cpp  monster_sprite_map.h  objects.cpp
Source/balance/: README.md  balance_config.json  balance_utility.cpp  balance_utility.h
Source/difficulty/: EDGE_CASES.md  README.md  VERIFICATION_SUMMARY.md  difficulty_config.json  difficulty_debug.cpp  difficulty_debug.h  difficulty_integration.cpp  difficulty_integration.h  difficulty_manager.cpp  difficulty_manager.h  difficulty_wave.cpp  difficulty_wave.h  difficulty_wave_README.md  difficulty_wave_config.json
Source/docs/: MONSTER_DATA_LOADING_FIX.md
Source/gear/: README.md  affix_score.cpp  affix_score.h  composite_score.cpp  gear_config.cpp  (+10 more)
Source/mods/: CMakeLists.txt  README.md  build_test.bat  drop_rate_cli.cpp  drop_rate_manager.cpp  drop_rate_manager.h  drop_rate_modifier.cpp  drop_rate_modifier.h  drop_rate_settings.cpp  drop_rate_settings.h  drop_rate_test.cpp  drop_rate_test.h  mod_framework.cpp  mod_framework.h  mod_init.cpp  mod_init.h  test_drop_rates.bat  test_drop_rates.cpp
Source/mods/config/: drop_rate_config.cpp  drop_rate_config.h  drop_rate_config.json  drop_rate_config_sample.json  drop_rate_schema.json  drop_rate_validator.cpp  drop_rate_validator.h
Source/mods/test/: CMakeLists.txt  drop_rate_test_script.cpp  invalid_test_config.json  manual_test_checklist.md  run_drop_rate_tests.bat  run_simple_tests.bat  run_standalone_test.bat  simple_test.cpp  standalone_test.cpp
Source/tests/: CMakeLists.txt  README.md  VERIFICATION_TESTS.md  difficulty_integration_test.cpp  difficulty_system_test.cpp  difficulty_system_verification_tests.cpp  difficulty_wave_test.cpp  gear_score_test.cpp  monster_data_load_test.cpp  monster_data_test.cpp  monster_type_test.cpp  run_verification_tests.cpp  system_verification_test.cpp  system_verification_test.h
docs/: CHANGELOG.md  dungeon_system_analysis.md  item_drop_rate_modding.md  item_drop_rate_test_report.md  item_system_analysis.md  mod_integration_points.md  monster_additions.md  monster_system_analysis.md
scripts/: crash_fix_prd.txt  drop_rate_prd.txt  monster_type_fix_prd.txt  prd.txt  prd_updated.txt  relwithdebinfo_fix_prd.txt  task-complexity-report.json
(+34 files in other folders)
